--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,252 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
+  list-style-type: none;
+  color: #474a4d;
+  font-family: "Inter", serif;
 }
 
 .header {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 70px;
   background: #2b2f33;
 }
 .header__container {
+  color: #fff;
   width: 1200px;
+  margin: 0 auto;
+}
+.header__navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__navigation-logo {
+  color: #fff;
+}
+.header__navigation-list {
+  display: flex;
+  gap: 20px;
+}
+.header__navigation-list-item {
+  color: #fff;
+  cursor: pointer;
+}
+.header__navigation-tel {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+}
+.header__navigation-tel-number {
+  color: #fff;
+  cursor: pointer;
+}
+
+.welcome {
+  margin: 0 auto;
+  margin-top: 10px;
+  display: flex;
+  width: 1200px;
+}
+.welcome__block {
+  padding: 30px;
+  border-radius: 15px 0 0 15px;
+  width: 40%;
+  background: #474a4d;
+}
+.welcome__block-header {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  padding-bottom: 10px;
+}
+.welcome__block-header-image {
+  width: 100px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+  background: url(./assets/elevator.png);
+  background-size: cover;
+  background-position: center;
+}
+.welcome__block-header-info {
+  width: 190px;
+}
+.welcome__block-header-name {
+  font-size: 20px;
+  color: #fff;
+}
+.welcome__block-header-position {
+  color: #fff;
+}
+.welcome__block-text-indent {
+  font-style: italic;
+  line-height: 130%;
+  text-indent: 20px;
+  color: #b4bcc5;
+}
+.welcome__image {
+  border-radius: 0px 15px 15px 0px;
+  width: 60%;
+  height: 500px;
+  background: url(./assets/elevator.png);
+  background-size: cover;
+  background-position: center;
+}
+
+.about {
+  width: 1200px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+.about__title {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.about__text-line {
+  justify-content: space-between;
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.about__text-line-block {
+  width: 450px;
+}
+.about__text-line-block-title {
+  font-weight: 500;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.about__text-line-block-list {
+  list-style: inside;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.about__text-line-block-list-item {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  gap: 10px;
+}
+.about__text-line-block-list-item::before {
+  content: "•";
+  font-size: 1.5em;
+  color: #474a4d;
+}
+
+.portfolio {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.portfolio__title {
+  width: 1200px;
+  margin: 0 auto;
+}
+.portfolio__image-line {
+  animation: marquee 10s linear infinite;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 10px;
+}
+.portfolio__image-line1 {
+  margin-left: -60px;
+  animation: marquee 10s linear infinite;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 10px;
+}
+
+.feedback {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.feedback__title {
+  width: 1200px;
+  margin: 0 auto;
+}
+.feedback__comment-line {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.feedback__comment-line-block {
+  padding: 15px;
+  width: 320px;
+  height: 195px;
+  background: #474a4d;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.feedback__comment-line-block-header-name {
+  color: #fff;
+}
+.feedback__comment-line-block-header-date {
+  color: #8a8a8a;
+}
+.feedback__comment-line-block-text {
+  color: #fff;
+}
+
+.footer {
+  font-size: 12px;
+  padding: 30px;
+  background: #2b2f33;
+}
+.footer__container {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer__title {
+  color: #fff;
+}
+.footer__nav {
+  gap: 20px;
+}
+.footer__nav-subtitle {
+  font-weight: 600;
+  color: #fff;
+}
+.footer__nav-list-item {
+  color: #fff;
+  cursor: pointer;
+}
+.footer__contact {
+  width: 280px;
+}
+.footer__contact-subtitle {
+  font-weight: 600;
+  color: #fff;
+}
+.footer__contact-list-item {
+  color: #fff;
+}
+.footer__contact-list-item-span {
+  color: #bdbdbd;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0); /* Начинаем с первого элемента */
+  }
+  100% {
+    transform: translateX(-50%); /* Заканчиваем ровно на середине, чтобы первый элемент был виден снова */
+  }
 }/*# sourceMappingURL=styles.css.map */
