--- a/styles.scss
+++ b/styles.scss
@@ -5,6 +5,10 @@
   list-style-type: none;
   color: #474a4d;
   font-family: "Inter", serif;
+  scroll-behavior: smooth;
+}
+body {
+  scroll-behavior: smooth;
 }
 
 .header {
@@ -13,6 +17,7 @@
   width: 100%;
   height: 70px;
   background: #2b2f33;
+
   &__container {
     color: #fff;
     width: 1200px;
@@ -28,6 +33,18 @@
     &-list {
       display: flex;
       gap: 20px;
+      & a {
+        text-decoration: none;
+        color: #fff;
+        font-weight: 500;
+        padding-bottom: 3px;
+        font-size: 16px;
+        // transition: 1s;
+        &:hover {
+          color: #e7e7e7;
+          border-bottom: solid 2px #0d677f;
+        }
+      }
       &-item {
         color: #fff;
         cursor: pointer;
@@ -68,23 +85,29 @@
         background: url(./assets/elevator.png);
         background-size: cover;
         background-position: center;
+        border: solid 3px #ffffff;
       }
       &-info {
-        width: 190px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
       }
       &-name {
-        font-size: 20px;
+        font-size: 26px;
         color: #fff;
       }
       &-position {
         color: #fff;
       }
     }
-    &-text-indent {
-      font-style: italic;
-      line-height: 130%;
-      text-indent: 20px;
-      color: #b4bcc5;
+    &-text {
+      margin-top: 30px;
+      &-indent {
+        font-style: italic;
+        line-height: 130%;
+        text-indent: 20px;
+        color: #b4bcc5;
+      }
     }
   }
   &__image {
@@ -144,42 +167,87 @@
 }
 
 .portfolio {
+  margin: 0 auto;
+  width: 1200px;
   overflow: hidden;
   display: flex;
-  flex-direction: column;
   gap: 10px;
+  flex-direction: column;
+  position: relative;
+
   &__title {
-    width: 1200px;
-    margin: 0 auto;
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  &__image-slider {
+    position: relative;
   }
   &__image-line {
-    animation: marquee 10s linear infinite;
+    width: fit-content;
     display: flex;
     flex-wrap: nowrap;
     gap: 10px;
+    &-image {
+      width: 192px;
+      height: 300px;
+      object-fit: cover;
+      border-radius: 15px;
+    }
   }
-  &__image-line1 {
-    margin-left: -60px;
-    animation: marquee 10s linear infinite;
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 10px;
+
+  &__left-arrow {
+    position: absolute;
+    display: block;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    opacity: 0.5;
+    cursor: pointer;
+  }
+  &__right-arrow {
+    position: absolute;
+    display: block;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    opacity: 0.5;
+  }
+  &:hover {
+    .portfolio__left-arrow {
+      opacity: 1;
+    }
+    .portfolio__right-arrow {
+      opacity: 1;
+    }
   }
 }
 
 .feedback {
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 1200px;
   &__title {
-    width: 1200px;
-    margin: 0 auto;
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  &__comment-slider {
+    position: relative;
   }
   &__comment-line {
     display: flex;
-    flex-direction: column;
+    flex-wrap: nowrap;
     gap: 10px;
+    width: fit-content;
     &-block {
       padding: 15px;
       width: 320px;
@@ -202,9 +270,37 @@
       }
     }
   }
+  &__left-arrow {
+    position: absolute;
+    display: block;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    opacity: 0.5;
+    cursor: pointer;
+  }
+  &__right-arrow {
+    position: absolute;
+    display: block;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    opacity: 0.5;
+  }
+  &:hover {
+    .feedback__left-arrow {
+      opacity: 1;
+    }
+    .feedback__right-arrow {
+      opacity: 1;
+    }
+  }
 }
 .footer {
-  font-size: 12px;
+  font-size: 14px;
   padding: 30px;
   background: #2b2f33;
   &__container {
@@ -212,18 +308,27 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
   }
+
   &__title {
     color: #fff;
+
+    align-self: center;
   }
   &__nav {
     gap: 20px;
+    & a {
+      color: #fff;
+    }
     &-subtitle {
       font-weight: 600;
       color: #fff;
+      margin-bottom: 5px;
     }
     &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 3px;
       &-item {
         color: #fff;
         cursor: pointer;
@@ -232,11 +337,41 @@
   }
   &__contact {
     width: 280px;
+
     &-subtitle {
       font-weight: 600;
       color: #fff;
+      margin-bottom: 5px;
     }
     &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 3px;
+      & a {
+        color: #bdbdbd;
+        &:hover {
+          color: #fff;
+        }
+      }
+      &-item {
+        color: #fff;
+        &-span {
+          color: #bdbdbd;
+        }
+      }
+    }
+  }
+  &__details {
+    width: 280px;
+    &-subtitle {
+      font-weight: 600;
+      color: #fff;
+      margin-bottom: 5px;
+    }
+    &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 3px;
       &-item {
         color: #fff;
         &-span {
@@ -247,11 +382,28 @@
   }
 }
 
-@keyframes marquee {
-  0% {
-    transform: translateX(0); /* Начинаем с первого элемента */
+.admin {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__title {
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 10px;
   }
-  100% {
-    transform: translateX(calc(-100% / 2)); /* Заканчиваем ровно на середине, чтобы первый элемент был виден снова */
+  &__form {
+    width: 350px;
+    margin: 0 auto;
+    &-input {
+      display: block;
+      width: 350px;
+      height: 40px;
+      border-radius: 15px;
+      border: solid 1px #e7e7e7;
+      margin-bottom: 10px;
+      padding-left: 10px;
+    }
   }
 }
