--- a/styles.scss
+++ b/styles.scss
@@ -382,7 +382,7 @@ body {
   }
 }
 
-.admin {
+.login {
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -404,6 +404,147 @@ body {
       border: solid 1px #e7e7e7;
       margin-bottom: 10px;
       padding-left: 10px;
+    }
+    &-button {
+      display: block;
+      width: 350px;
+      height: 40px;
+      border-radius: 15px;
+      border: none;
+      font-weight: bold;
+      font-size: 20px;
+      background: #0d677f;
+      color: #fff;
+      cursor: pointer;
+    }
+  }
+}
+
+.admin {
+  &__container {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  &__add {
+    &-images {
+      &-container {
+        display: flex;
+        justify-content: space-between;
+      }
+      &-title {
+        margin-bottom: 20px;
+      }
+      &-form {
+        width: 230px;
+        &-label {
+          display: block;
+          width: 230px;
+          height: 360px;
+          border-radius: 15px;
+          border: 1px solid #474a4d;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        &-input {
+          display: none;
+        }
+        &-icon {
+          width: 55px;
+          height: 55px;
+          cursor: pointer;
+        }
+        &-button {
+          margin-top: 20px;
+          display: block;
+          width: 100%;
+          height: 40px;
+          border-radius: 15px;
+          border: none;
+          font-weight: bold;
+          font-size: 20px;
+          background: #0d677f;
+          color: #fff;
+          cursor: pointer;
+        }
+      }
+      &-list {
+        display: flex;
+        gap: 5px;
+        flex-wrap: wrap;
+        padding: 10px;
+        overflow: scroll;
+        overflow-x: hidden;
+        width: 710px;
+        height: 360px;
+        background: #f2f2f2;
+        border-radius: 15px;
+        &-item {
+          width: 93px;
+          height: 145px;
+        }
+      }
+    }
+    &-comments {
+      &-container {
+        display: flex;
+        justify-content: space-between;
+      }
+      &-title {
+        margin-bottom: 20px;
+      }
+      &-form {
+        width: 385px;
+        height: 45px;
+        &-label {
+          display: block;
+          width: 230px;
+          height: 360px;
+          border-radius: 15px;
+          border: 1px solid #474a4d;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        &-input {
+          display: none;
+        }
+        &-icon {
+          width: 55px;
+          height: 55px;
+          cursor: pointer;
+        }
+        &-button {
+          margin-top: 20px;
+          display: block;
+          width: 100%;
+          height: 40px;
+          border-radius: 15px;
+          border: none;
+          font-weight: bold;
+          font-size: 20px;
+          background: #0d677f;
+          color: #fff;
+          cursor: pointer;
+        }
+      }
+      &-list {
+        display: flex;
+        gap: 5px;
+        flex-wrap: wrap;
+        padding: 10px;
+        overflow: scroll;
+        overflow-x: hidden;
+        width: 710px;
+        height: 360px;
+        background: #f2f2f2;
+        border-radius: 15px;
+        &-item {
+          width: 93px;
+          height: 145px;
+        }
+      }
     }
   }
 }
