--- a/client/styles.css
+++ b/client/styles.css
@@ -8,6 +8,8 @@
   font-family: "Inter", serif;
   scroll-behavior: smooth;
   box-sizing: content-box;
+  outline: none;
+  border: 0;
 }
 
 body {
@@ -429,6 +431,7 @@ body {
   width: 230px;
 }
 .admin__add-images-form-label {
+  position: relative;
   cursor: pointer;
   display: block;
   width: 230px;
@@ -439,10 +442,20 @@ body {
   justify-content: center;
   align-items: center;
 }
+.admin__add-images-form-image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 15px;
+}
 .admin__add-images-form-input {
   display: none;
 }
 .admin__add-images-form-icon {
+  position: relative;
+  z-index: 999;
   width: 55px;
   height: 55px;
   cursor: pointer;
@@ -475,6 +488,21 @@ body {
 .admin__add-images-list-item {
   width: 93px;
   height: 145px;
+}
+.admin__add-images-list-item img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 15px;
+  width: 100%;
+  height: 100%;
+}
+.admin__add-images-list-item-delete {
+  box-sizing: border-box;
+  padding: 5px;
+  width: 100%;
+  border-radius: 10px;
+  background: #ff7575;
+  color: #fff;
 }
 .admin__add-comments-container {
   display: flex;
