--- a/client/styles.scss
+++ b/client/styles.scss
@@ -7,6 +7,8 @@
   font-family: "Inter", serif;
   scroll-behavior: smooth;
   box-sizing: content-box;
+  outline: none;
+  border: 0;
 }
 body {
   scroll-behavior: smooth;
@@ -440,6 +442,7 @@ body {
       &-form {
         width: 230px;
         &-label {
+          position: relative;
           cursor: pointer;
           display: block;
           width: 230px;
@@ -450,11 +453,20 @@ body {
           justify-content: center;
           align-items: center;
         }
+        &-image {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          object-fit: cover;
+          border-radius: 15px;
+        }
         &-input {
           display: none;
         }
 
         &-icon {
+          position: relative;
+          z-index: 999;
           width: 55px;
           height: 55px;
           cursor: pointer;
@@ -487,6 +499,20 @@ body {
         &-item {
           width: 93px;
           height: 145px;
+          & img {
+            object-fit: cover;
+            border-radius: 15px;
+            width: 100%;
+            height: 100%;
+          }
+          &-delete {
+            box-sizing: border-box;
+            padding: 5px;
+            width: 100%;
+            border-radius: 10px;
+            background: #ff7575;
+            color: #fff;
+          }
         }
       }
     }
