--- a/client/styles.css
+++ b/client/styles.css
@@ -480,21 +480,23 @@ body {
   padding: 10px;
   overflow: scroll;
   overflow-x: hidden;
-  width: 720px;
+  width: 730px;
   height: 360px;
   background: #f2f2f2;
   border-radius: 15px;
 }
 .admin__add-images-list-item {
-  width: 93px;
-  height: 145px;
+  margin-bottom: 10px;
 }
 .admin__add-images-list-item img {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 15px;
   width: 100%;
-  height: 100%;
+  display: block;
+  width: 95px;
+  height: 145px;
+  margin-bottom: 5px;
 }
 .admin__add-images-list-item-delete {
   box-sizing: border-box;
@@ -554,12 +556,45 @@ body {
   padding: 10px;
   overflow: scroll;
   overflow-x: hidden;
-  width: 720px;
+  width: 730px;
   height: 360px;
   background: #f2f2f2;
   border-radius: 15px;
 }
 .admin__add-comments-list-item {
-  width: 93px;
-  height: 145px;
+  padding: 15px;
+  width: 320px;
+  height: 195px;
+  background: #474a4d;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+}
+.admin__add-comments-list-item-wrapper {
+  margin-top: 10px;
+}
+.admin__add-comments-list-item-name {
+  font-weight: 500;
+  font-size: 20px;
+  color: #fff;
+  margin-bottom: 3px;
+}
+.admin__add-comments-list-item-date {
+  color: #8a8a8a;
+  margin-bottom: 10px;
+}
+.admin__add-comments-list-item-text {
+  color: #fff;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.admin__add-comments-list-item-delete {
+  margin-top: 5px;
+  cursor: pointer;
+  box-sizing: border-box;
+  padding: 5px;
+  width: 100%;
+  border-radius: 10px;
+  background: #ff7575;
+  color: #fff;
 }/*# sourceMappingURL=styles.css.map */
