--- a/client/styles.scss
+++ b/client/styles.scss
@@ -492,18 +492,20 @@ body {
         padding: 10px;
         overflow: scroll;
         overflow-x: hidden;
-        width: 720px;
+        width: 730px;
         height: 360px;
         background: #f2f2f2;
         border-radius: 15px;
         &-item {
-          width: 93px;
-          height: 145px;
+          margin-bottom: 10px;
           & img {
             object-fit: cover;
             border-radius: 15px;
             width: 100%;
-            height: 100%;
+            display: block;
+            width: 95px;
+            height: 145px;
+            margin-bottom: 5px;
           }
           &-delete {
             box-sizing: border-box;
@@ -568,13 +570,46 @@ body {
         padding: 10px;
         overflow: scroll;
         overflow-x: hidden;
-        width: 720px;
+        width: 730px;
         height: 360px;
         background: #f2f2f2;
         border-radius: 15px;
         &-item {
-          width: 93px;
-          height: 145px;
+          padding: 15px;
+          width: 320px;
+          height: 195px;
+          background: #474a4d;
+          border-radius: 15px;
+          display: flex;
+          flex-direction: column;
+          &-wrapper {
+            margin-top: 10px;
+          }
+          &-name {
+            font-weight: 500;
+            font-size: 20px;
+            color: #fff;
+            margin-bottom: 3px;
+          }
+          &-date {
+            color: #8a8a8a;
+            margin-bottom: 10px;
+          }
+          &-text {
+            color: #fff;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+          &-delete {
+            margin-top: 5px;
+            cursor: pointer;
+            box-sizing: border-box;
+            padding: 5px;
+            width: 100%;
+            border-radius: 10px;
+            background: #ff7575;
+            color: #fff;
+          }
         }
       }
     }
