--- a/client/styles.scss
+++ b/client/styles.scss
@@ -20,6 +20,7 @@ body {
   width: 100%;
   height: 70px;
   background: #2b2f33;
+  padding: 0 1px;
 
   &__container {
     color: #fff;
@@ -270,6 +271,16 @@ body {
       }
       &-text {
         color: #fff;
+        overflow: hidden;
+        overflow-y: auto;
+        &::-webkit-scrollbar {
+          width: 5px;
+          background: #474a4d;
+        }
+        &::-webkit-scrollbar-thumb {
+          background: #424242;
+          border-radius: 10px;
+        }
       }
     }
   }
@@ -358,7 +369,18 @@ body {
       }
       &-item {
         color: #fff;
+        &-div {
+          margin-top: 3px;
+          display: flex;
+          flex-direction: column;
+          gap: 3px;
+        }
         &-span {
+          color: #bdbdbd;
+        }
+        &-span-address {
+          display: block;
+          margin-top: 3px;
           color: #bdbdbd;
         }
       }
