--- a/client/styles.css
+++ b/client/styles.css
@@ -22,6 +22,7 @@ body {
   width: 100%;
   height: 70px;
   background: #2b2f33;
+  padding: 0 1px;
 }
 .header__container {
   color: #fff;
@@ -72,6 +73,8 @@ body {
   width: 1200px;
 }
 .welcome__block {
+  box-sizing: border-box;
+  height: 510px;
   padding: 30px;
   border-radius: 15px 0 0 15px;
   width: 40%;
@@ -116,9 +119,10 @@ body {
   color: #b4bcc5;
 }
 .welcome__image {
+  display: block;
   border-radius: 0px 15px 15px 0px;
   width: 60%;
-  height: 500px;
+  height: 510px;
   background: url(./assets/elevator.png);
   background-size: cover;
   background-position: center;
